fix CSS z-index for locales dropdown in classification administration

--- a/app/assets/stylesheets/modules/components/_classifications.scss
+++ b/app/assets/stylesheets/modules/components/_classifications.scss
@@ -49,7 +49,7 @@ ul.backend-treeview-list,
       position: absolute;
       top: -3.5rem;
       right: -1px;
-      z-index: 13;
+      z-index: 999;
       height: 3.5rem;
       padding: 0.5rem;
       border-top-left-radius: 1.5rem;
